Added the web search for values stored in the shared preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Week2Day2ClassExercise</string>
+    <string name="title_activity_web">WebActivity</string>
 </resources>
